# pygame-panel

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pygame-ce-panel/: __init__.py
src/pygame-panel/: __init__.py
src/pygame_panel/: __init__.py  __main__.py  panel.py
